fix wrapping of hyperlinks

--- a/static/css/styles-dark.css
+++ b/static/css/styles-dark.css
@@ -19,6 +19,10 @@ time {
   font-family: sans-serif;
 }
 
+a {
+	word-wrap: break-word;
+}
+
 #container {
   margin: 0;
   padding: 0;
