--- a/static/css/styles-light.css
+++ b/static/css/styles-light.css
@@ -18,6 +18,10 @@ time {
   font-family: sans-serif;
 }
 
+a {
+	word-wrap: break-word;
+}
+
 #container {
   margin: 0;
   padding: 0;
